commit local changes before branch rename

--- a/src/styles/module.css
+++ b/src/styles/module.css
@@ -47,3 +47,8 @@
     width: auto;
     height: auto;
 }
+
+@font-face {
+    font-family: 'pf2-actions';
+    src: url("/Data/systems/pf2e/fonts/Pathfinder2eActions.ttf");
+}
