--- a/src/styles/module.css
+++ b/src/styles/module.css
@@ -48,7 +48,7 @@
     height: auto;
 }
 
-@font-face {
+/*@font-face {
     font-family: 'pf2-actions';
     src: url("/Data/systems/pf2e/fonts/Pathfinder2eActions.ttf");
-}
+}*/
